Update text over-flow

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -51,3 +51,11 @@
     left: 5%;
 }
 
+div.short {
+    white-space: nowrap; 
+    width: 50px; 
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    border: 1px solid #000000;
+}
+
