--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -59,3 +59,46 @@ div.short {
     border: 1px solid #000000;
 }
 
+
+/*--------------Footer--------------------------*/
+.footer{
+    background: #152F4F;
+    color:white;
+  }
+
+.links ul{
+    list-style-type: none;
+}
+
+.links li a{
+    color: white;
+    transition: color .2s;
+}
+
+.links li a:hover{
+    text-decoration: none;
+    color: #4180CB;
+}
+
+.about-company i{
+    font-size: 25px;
+}
+
+.about-company a{
+    color:white;
+    transition: color .2s;
+}
+
+.about-company a:hover{
+    color:#4180CB;
+}
+
+.location i{
+    font-size: 18px;
+}
+
+.copyright p{
+    border-top:1px solid rgba(255,255,255,.1);
+} 
+
+
