--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -30,8 +30,8 @@
 
 .containerFullInfos img {
     box-shadow: 7px 4px 24px -8px;
-    height: 500px;
-    width: 500px;
+    height: 35%;
+    width: 35%;
     float: right;
 }
 
