--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -32,7 +32,7 @@
     box-shadow: 7px 4px 24px -8px;
     height: 35%;
     width: 35%;
-    float: right;
+    float: important!right;
 }
 
 /**cart items**/
