--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -32,9 +32,9 @@
     box-shadow: 7px 4px 24px -8px;
     height: 35%;
     width: 35%;
-    float: important!right;
+    float: right;
 }
-
+012345
 /**cart items**/
 /** .cartItem{
     position: absolute !important;
